kubernetes/apps/media/radarr/config/http-route-internal.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr-internal
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/target: kubernetes.krapulax.home
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: http
  hostnames:
    - radarr.krapulax.home
  rules:
    - backendRefs:
        - name: radarr
          namespace: media
          port: 7878
