kubernetes/apps/media/radarr/config/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/hostname: radarr.krapulax.dev
    external-dns.alpha.kubernetes.io/target: external.krapulax.dev
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/name: Radarr
    gethomepage.dev/icon: radarr.png
    gethomepage.dev/description: Movie library automation
    gethomepage.dev/weight: "40"
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - radarr.krapulax.dev
  rules:
    - backendRefs:
        - name: radarr
          namespace: media
          port: 7878
